# sdxl-scrum

./: .gitignore  README.md  debug.py  pyproject.toml  send_req.py
debug/: debug_shuffle.py
sdxl_scrum/: danbooru_artist_from_api.py  danbooru_handle_getter.py  danbooru_todo.py  gdl_runner.py
sdxl_scrum/twitter/: user_following.py
